# rustcom

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
base/: Cargo.toml
base/src/: cli.rs  lib.rs  logger.rs  messages.rs  serial.rs
gui/: Cargo.toml
gui/src/: lib.rs  menu_bar.rs  modals.rs  status_bar.rs  tabs.rs  widgets.rs
gui/src/tabs/: log_tab.rs  settings_tab.rs  terminal_tab.rs
gui/src/widgets/: file_protocol_picker.rs  line_end_picker.rs
rc-core/: Cargo.toml
rc-core/src/: lib.rs  serial.rs
rc-gui/: Cargo.toml
rc-gui/src/: lib.rs  logger.rs  menu_bar.rs  modals.rs  status_bar.rs  tabs.rs
rc-gui/src/tabs/: log_tab.rs  settings_tab.rs  terminal_tab.rs
rc-gui/src/widgets/: file_protocol_picker.rs  line_end_picker.rs
rc-tui/: Cargo.toml
rc-tui/src/: lib.rs
rustcom/: Cargo.toml
rustcom-native/: Cargo.toml
rustcom-native/src/: main.rs
rustcom/src/: main.rs
src/: app.rs  cli.rs  gui.rs  lib.rs  logger.rs  macros.rs  main.rs  menu_bar.rs  messages.rs  serial.rs  status_bar.rs  tabs.rs  tui.rs
src/gui/: line_end_picker.rs  menu_bar.rs  modals.rs  port_settings.rs  status_bar.rs  tabs.rs
src/gui/tabs/: log_tab.rs  settings_tab.rs  terminal_tab.rs
src/gui/widgets/: file_protocol_picker.rs  line_end_picker.rs  mod.rs  port_settings.rs
src/serial/: serial_config.rs
tui/: Cargo.toml
tui/src/: lib.rs
