[package]
name = "rustcom"
authors = ["Aleksa Jonić <ullnorse@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
serial2 = "0.1.7"
anyhow = "1.0.69"
egui = "0.21.0"
eframe = "0.21.3"
egui_dock = "0.4.0"
image = "0.24.5"
flume = "0.10.14"
parking_lot = "0.12.1"
open = "4.0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"