[package]
name = "rustcom"
authors = ["Aleksa Jonić <ullnorse@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
serial2 = "0.1.7"
serialport = "4.2.0"
anyhow = "1.0.69"
thiserror = "1.0.40"
egui = "0.22.0"
eframe = "0.22.0"
egui_dock = "0.6.0"
image = "0.24.5"
flume = "0.10.14"
parking_lot = "0.12.1"
open = "4.0.1"
rustc-hash = "1.1.0"
egui_extras = {version = "0.22.0", features = ["image", "svg"]}
once_cell = "1.17.1"
arboard = "3.2.0"
chrono = "0.4.24"
dirs = "5.0.0"
native-dialog = "0.6.3"
join_str = "0.1.0"
color-hex = "0.2.0"
log = "0.4.17"
env_logger = "0.10.0"
astrolabe = "0.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"