[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

clap = {version = "4.5", features = ["derive"]}
serial2 = "0.2"
serialport = "4.3"
flume = "0.11"
chrono = "0.4"
join_str = "0.1"
