[package]
name = "rustcom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
gui.workspace = true
tui.workspace = true

anyhow.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
